--- a/resources/assets/scss/site.scss
+++ b/resources/assets/scss/site.scss
@@ -667,3 +667,30 @@ footer{
     border-color: #d2cece;
   }
 }
+.lotus-wrapper{
+  max-width: 1300px;
+  position: absolute;
+  margin: auto;
+  left: 0;
+  right: 0;
+  bottom: -70px;
+  z-index: 0;
+  .lotus{
+    bottom: 0px;
+    position: absolute;
+    right: -130px;
+    width: 350px;
+    z-index: 0;
+    overflow: visible;
+    @media (max-width: 768px) {
+      bottom: 50px;
+      width: 200px;
+      right: -50px;
+    }
+    @media (max-width: 400px) {
+      bottom: 100px;
+      width: 100px;
+      right: -30px;
+    }
+  }
+}
